--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
       insert string to reverse, can be used for things like passwords
     </p>
     <input class="input-text" type="text" placeholder="Type here" autofocus />
-    <button class="btn-reverse"></button>
+    <button class="btn-reverse">
+      <img src="/refresh.svg" alt="reverse-img" />
+    </button>
     <span class="chip">Copied</span>
-    <span class="theme"></span>
+    <span class="theme">
+      <img
+        width="48"
+        height="48"
+        src="https://img.icons8.com/color/48/partly-cloudy-day--v1.png"
+        alt="partly-cloudy-day--v1"
+      />
+    </span>
     <script src="js/main.js"></script>
   </body>
 </html>
