--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>invserify</title>
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1 class="heading">Inversify • reverse anything</h1>
+    <h1 class="heading">Inversify • <span class="color">reverse</span> anything</h1>
     <p class="description">
-      insert string to reverse, can be used for things like passwords
+      insert string to <span class="color">reverse</span>, can be used for things like <span class="color">passwords</span>
     </p>
     <input class="input-text" type="text" placeholder="Type here" autofocus />
     <button class="btn-reverse">
